Fix mobile overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ a {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 90%;
+  min-height: 90%;
   margin-top: 20px;
 }
 .name {
